force-app/main/default/objects/SeisakuSettei__c/SeisakuSettei__c.object-meta.xml
<CustomObject>
    <label>制作設定</label>
    <nameField>
        <label>制作設定ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>