force-app/main/default/objects/SeisakuSettei__c/fields/adcms_category__c.field-meta.xml
<CustomField>
    <fullName>adcms_category__c</fullName>
    <label>カテゴリー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>