force-app/main/default/objects/SeisakuSettei__c/fields/admail_by_date__c.field-meta.xml
<CustomField>
    <fullName>admail_by_date__c</fullName>
    <label>期限日</label>
    <type>Date</type>
</CustomField>