force-app/main/default/objects/SeisakuSettei__c/fields/admail_by_date_error_mail__c.field-meta.xml
<CustomField>
    <fullName>admail_by_date_error_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>期限日不備通知を送信済みです。
（誘導枠で「期限日」がメニューの「終了日」より遅い場合）</inlineHelpText>
    <label>期限日不備通知送信済み</label>
    <type>Checkbox</type>
</CustomField>