force-app/main/default/objects/SeisakuSettei__c/fields/agency_name__c.field-meta.xml
<CustomField>
    <fullName>agency_name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; + seisaku_siharai__r.menu__r.custom_opportunity__r.agency_name__r.Id + &quot;/view&quot;, seisaku_siharai__r.menu__r.custom_opportunity__r.agency_name__r.Name,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店社名</label>
    <type>Text</type>
</CustomField>