force-app/main/default/objects/SeisakuSettei__c/fields/backlog_check__c.field-meta.xml
<CustomField>
    <fullName>backlog_check__c</fullName>
    <label>チェックリスト</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>