force-app/main/default/objects/SeisakuSettei__c/fields/Backlog_Id__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Id__c</fullName>
    <label>Backlog課題Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>