force-app/main/default/objects/SeisakuSettei__c/fields/backlog_status__c.field-meta.xml
<CustomField>
    <fullName>backlog_status__c</fullName>
    <label>ステータス</label>
    <length>255</length>
    <type>Text</type>
</CustomField>