force-app/main/default/objects/SeisakuSettei__c/fields/backlog_status_picklist__c.field-meta.xml
<CustomField>
    <fullName>backlog_status_picklist__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規作成</fullName>
            </value>
            <value>
                <fullName>未対応</fullName>
            </value>
            <value>
                <fullName>原稿制作中</fullName>
            </value>
            <value>
                <fullName>校了</fullName>
            </value>
            <value>
                <fullName>公開</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>