force-app/main/default/objects/SeisakuSettei__c/fields/backlog_title__c.field-meta.xml
<CustomField>
    <fullName>backlog_title__c</fullName>
    <label>タイトル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>