force-app/main/default/objects/SeisakuSettei__c/fields/BacklogProjectName__c.field-meta.xml
<CustomField>
    <fullName>BacklogProjectName__c</fullName>
    <label>Backlogプロジェクト名_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>