force-app/main/default/objects/SeisakuSettei__c/fields/BacklogProjectName_picklist__c.field-meta.xml
<CustomField>
    <fullName>BacklogProjectName_picklist__c</fullName>
    <label>Backlogプロジェクト名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>社内広告用_CMS登録</fullName>
            </value>
            <value>
                <fullName>社内広告用_誘導枠</fullName>
            </value>
            <value>
                <fullName>社内広告用_メルマガ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>