force-app/main/default/objects/SeisakuSettei__c/fields/baitai_name__c.field-meta.xml
<CustomField>
    <fullName>baitai_name__c</fullName>
    <formula>TEXT ( seisaku_siharai__r.menu__r.baitai_name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>媒体名</label>
    <type>Text</type>
</CustomField>