force-app/main/default/objects/SeisakuSettei__c/fields/bucklog_url__c.field-meta.xml
<CustomField>
    <fullName>bucklog_url__c</fullName>
    <label>コード</label>
    <type>Url</type>
</CustomField>