force-app/main/default/objects/SeisakuSettei__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>コード</label>
    <type>Url</type>
</CustomField>