force-app/main/default/objects/SeisakuSettei__c/fields/customers_type__c.field-meta.xml
<CustomField>
    <fullName>customers_type__c</fullName>
    <formula>IF ( CONTAINS ( TEXT ( seisaku_siharai__r.menu__r.custom_opportunity__r.agency_name__r.FlgAd__c ) , &quot;代理店&quot; ) , &quot;代理店&quot; , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>代理店フラグ</label>
    <type>Text</type>
</CustomField>