force-app/main/default/objects/SeisakuSettei__c/fields/e_client_name__c.field-meta.xml
<CustomField>
    <fullName>e_client_name__c</fullName>
    <formula>seisaku_siharai__r.menu__r.custom_opportunity__r.clent_name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出力用_社名</label>
    <type>Text</type>
</CustomField>