force-app/main/default/objects/SeisakuSettei__c/fields/hiduke_check__c.field-meta.xml
<CustomField>
    <fullName>hiduke_check__c</fullName>
    <formula>IF ( CONTAINS ( bucklog_url__c ,  &quot;TK_ADFRAME&quot; ) &amp;&amp; admail_by_date__c &gt; seisaku_siharai__r.menu__r.end_date__c , True , False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>誘導枠（TK_ADFRAME）の場合、「期限日」がメニューの「終了日」より遅ければチェックが入ります</inlineHelpText>
    <label>日付チェック</label>
    <type>Checkbox</type>
</CustomField>