force-app/main/default/objects/SeisakuSettei__c/fields/kind__c.field-meta.xml
<CustomField>
    <fullName>kind__c</fullName>
    <label>種別_テキスト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>