force-app/main/default/objects/SeisakuSettei__c/fields/kind_picklist__c.field-meta.xml
<CustomField>
    <fullName>kind_picklist__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>タスク</fullName>
            </value>
            <value>
                <fullName>バグ</fullName>
            </value>
            <value>
                <fullName>要望</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>【メール体裁記事広告】</fullName>
            </value>
            <value>
                <fullName>【東洋経済編集部メール】</fullName>
            </value>
            <value>
                <fullName>【東洋経済メール（全配信）】</fullName>
            </value>
            <value>
                <fullName>【東洋経済ターゲティングメール】</fullName>
            </value>
            <value>
                <fullName>オンライン単独（トラコスさんCMS制作）</fullName>
            </value>
            <value>
                <fullName>オンライン単独（ディレクターCMS制作）</fullName>
            </value>
            <value>
                <fullName>オンライン単独（HTML制作）</fullName>
            </value>
            <value>
                <fullName>誌面転載（トラコスさんCMS制作）</fullName>
            </value>
            <value>
                <fullName>誌面転載（ディレクターCMS制作）</fullName>
            </value>
            <value>
                <fullName>事後レポート（トラコスさんCMS制作）</fullName>
            </value>
            <value>
                <fullName>【緊急】オンライン単独（CMS制作）</fullName>
            </value>
            <value>
                <fullName>【緊急】誌面転載（CMS制作）</fullName>
            </value>
            <value>
                <fullName>誘導枠依頼（Aパターンのみ）</fullName>
            </value>
            <value>
                <fullName>誘導枠依頼（A/Bパターン）</fullName>
            </value>
            <value>
                <fullName>誘導枠依頼（ディレクター自身が入稿）</fullName>
            </value>
            <value>
                <fullName>制作依頼</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>