force-app/main/default/objects/SeisakuSettei__c/fields/menu_link__c.field-meta.xml
<CustomField>
    <fullName>menu_link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_350,FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350)) + seisaku_siharai__r.menu__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メニュー詳細リンク</label>
    <type>Text</type>
</CustomField>