force-app/main/default/objects/SeisakuSettei__c/fields/menu_start_date__c.field-meta.xml
<CustomField>
    <fullName>menu_start_date__c</fullName>
    <formula>seisaku_siharai__r.menu__r.start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メニュー_開始日</label>
    <type>Date</type>
</CustomField>