force-app/main/default/objects/SeisakuSettei__c/fields/menu_type__c.field-meta.xml
<CustomField>
    <fullName>menu_type__c</fullName>
    <formula>TEXT ( seisaku_siharai__r.menu__r.menu_type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メニュー名</label>
    <type>Text</type>
</CustomField>