force-app/main/default/objects/SeisakuSettei__c/fields/Oldbacklog_check__c.field-meta.xml
<CustomField>
    <fullName>Oldbacklog_check__c</fullName>
    <label>Oldチェックリスト</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>