force-app/main/default/objects/SeisakuSettei__c/fields/product_menu__c.field-meta.xml
<CustomField>
    <fullName>product_menu__c</fullName>
    <formula>TEXT ( seisaku_siharai__r.product_menu__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>制作物</label>
    <type>Text</type>
</CustomField>