force-app/main/default/objects/SeisakuSettei__c/fields/sales_staff__c.field-meta.xml
<CustomField>
    <fullName>sales_staff__c</fullName>
    <formula>seisaku_siharai__r.menu__r.custom_opportunity__r.sales_staff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>広告営業担当</label>
    <type>Text</type>
</CustomField>