force-app/main/default/objects/SeisakuSettei__c/fields/seisaku_director__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director__c</fullName>
    <formula>seisaku_siharai__r.menu__r.seisaku_director__r.LastName + &#39; &#39; + seisaku_siharai__r.menu__r.seisaku_director__r.FirstName</formula>
    <label>制作担当</label>
    <type>Text</type>
</CustomField>