force-app/main/default/objects/SeisakuSettei__c/fields/seisaku_siharai__c.field-meta.xml
<CustomField>
    <fullName>seisaku_siharai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>制作・支払</label>
    <referenceTo>SeisakuSiharai__c</referenceTo>
    <relationshipLabel>制作設定</relationshipLabel>
    <relationshipName>eGBh</relationshipName>
    <type>Lookup</type>
</CustomField>