force-app/main/default/objects/SeisakuSettei__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <label>開始日</label>
    <type>Date</type>
</CustomField>