force-app/main/default/objects/SeisakuSettei__c/validationRules/AccountLock.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountLock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(seisaku_siharai__r.menu__r.custom_opportunity__r.clent_name__r.is_deleted__c == true, ISNEW())</errorConditionFormula>
    <errorMessage>取引禁止のクライアントです。</errorMessage>
</ValidationRule>