force-app/main/default/objects/SeisakuSettei__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BacklogProjectName__c</columns>
    <columns>backlog_status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>seisaku_director__c</columns>
    <columns>adcms_category__c</columns>
    <columns>kind_picklist__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>